Added some ui label improvements from Jean-Luc Malet, submitted in Jira #OFBIZ-198
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4905 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -103,6 +103,7 @@ OrderChooseFollowingForGift=You may also choose one of the following for your gi
 OrderCompanyName=OFBiz: Order Manager
 OrderCompanySubtitle=Part of the Open For Business Family of Open Source Software
 OrderContactInformation=Contact Information
+OrderCreatedBy=Created by
 OrderCreateNewReturn=Create new return
 OrderCreateOrder=Create Order
 OrderCreateReturn=Create return
@@ -132,6 +133,8 @@ OrderImage=Image
 OrderViewImage=View Image
 OrderLookupOrder=Lookup Order(s)
 OrderLookupReturn=Lookup Return(s)
+OrderNewShipmentForShipGroup=New Shipment For Ship Group
+OrderNoChannel=No Channel
 OrderNoGiftWrap=No Gift Wrap
 OrderNoNotes=No notes for this order.
 OrderNoOrderFound=No Order Found
@@ -151,6 +154,7 @@ OrderOrderDate=Order Date
 OrderOrdered=Ordered
 OrderOrderEntry=Order Entry
 OrderOrderEntryCustomerInfo=Order Entry Customer Info
+OrderOrderEntryOrderTerms=Order Entry Order Terms
 OrderOrderEntryPaymentSettings=Order Entry Payment Settings
 OrderOrderEntryShipToSettings=Order Entry Ship-To Settings
 OrderOrderFor=Order for
@@ -162,19 +166,25 @@ OrderOrderList=Order List
 OrderOrderNeedingAttention=Orders Needing Attention
 OrderOrderNumber=Order Number
 OrderOrderOptionSettings=Order Option Settings
-OrderOrderPurchaseToBeScheluded=Order Purchase To Be Scheluded
+OrderOrderPurchaseToBeScheduled=Order Purchase To Be Scheluded
 OrderOrderQuotes=Quotes
 OrderOrderReturn=Return
 OrderOrderReturns=Returns
 OrderOrderShortcuts=Shortcuts
 OrderOrderTotal=Order Total
 OrderOrderType=Order Type
+OrderOriginFacility=Origin Facility
 OrderPaymentOfflineCheckMoney=Offline Payment: Check/Money Order
 OrderPONumber=PO Number
 OrderPrice=Price
+OrderProductStore=Product Store
 OrderPromotionCouponCodes=Promotion/Coupon Codes
 OrderPurchaseOrder=Purchase Order
 OrderQuantity=Quantity
+OrderQuickRefundEntireOrder=Quick Refund Entire Order
+OrderQuickShipEntireOrder=Quick Ship Entire Order
+OrderQuote=Order Quote
+OrderQuotes=Order Quote
 OrderRecalculateOrder=Recalculate Order
 OrderReceiveReturn=Receive Return
 OrderRemaining=Remaining
@@ -189,11 +199,17 @@ OrderReturnHeader=Return Header
 OrderReturnItems= Return Items
 OrderReturnToFacility=Return To Facility
 OrderReviewOrder=Review Order
+OrderSalesChannel=Sales Channel
 OrderSalesOrder=Sales Order
 OrderSalesTax=Sales Tax
+OrderScheduleDelivery=Schedule Delivery
+OrderSelectAgreement=Select an agreement for this order
+OrderSelectCurrency=Or set a currency for this order
 OrderSelectPartyToOrder=Select type of party to associate to order
 OrderSelectedGiftNotAvailableForAll=Selected Gift Wrap is not available for all items. The items which are available have been selected, the others remain unchanged.
 OrderSendEmail=Send Email
+OrderShipAfterDate=Ship After Date
+OrderShipBeforeDate=Ship Before Date
 OrderShipGroup=Ship Group
 OrderShipmentInformation=Shipment Information
 OrderSplittingPreference=Splitting Preference
@@ -201,6 +217,10 @@ OrderStartDateTime=Start Date/Time
 OrderStatusHistory=Status History
 OrderSubTotal=Sub.Total
 OrderSurvey=Survey
+OrderOrderTerms=Order Terms
+OrderOrderTermDays=Term Days
+OrderOrderTermType=Term Type
+OrderOrderTermValue=Term Value
 OrderThisOrderGift=This order is a gift
 OrderThisOrderNotGift=This order is not a gift
 OrderTotalDue=Total Due
@@ -212,16 +232,9 @@ OrderUnitList=Unit / List
 OrderUseDefaultComment=Use as default comment for next entry
 OrderUseDefaultDesiredDeliveryDate=Use as default desired delivery date for next entry
 OrderViewEditDelivery=View/Delivery Schedule Info
+OrderViewEditDeliveryScheduleInfo=View/Edit Delivery Schedule Info
 OrderViewPermissionError=You do not have permission to view this page. ("ORDERMGR_VIEW" or "ORDERMGR_ADMIN" needed)
-OrderSelectAgreement=Select an agreement for this order
-OrderSelectCurrency=Or set a currency for this order
-OrderOrderTermType=Term Type
-OrderOrderTermValue=Term Value
-OrderOrderTermDays=Term Days
-OrderOrderTerms=Order Terms
-OrderOrderEntryOrderTerms=Order Entry Order Terms
-OrderShipBeforeDate=Ship Before Date
-OrderShipAfterDate=Ship After Date
+OrderWorkflow=Workflow
 
 PageTitleLogin=Login
 
