--- a/framework/service/build.xml
+++ b/framework/service/build.xml
@@ -43,7 +43,7 @@
     <target name="classpath">
         <path id="local.class.path">
             <fileset dir="${lib.dir}" includes="*.jar"/>
-            <fileset dir="../../base/lib" includes="*.jar"/>            
+            <fileset dir="../../base/lib" includes="*.jar"/>
             <fileset dir="../../base/lib/commons" includes="*.jar"/>
             <fileset dir="../../base/lib/scripting" includes="*.jar"/>
             <fileset dir="../../base/build/lib" includes="*.jar"/>
@@ -104,9 +104,22 @@
         </rmic>
     </target>
 
-    <target name="jar" depends="stubs">
+    <target name="main-jar" depends="stubs">
         <jar jarfile="${build.dir}/lib/${name}.jar" basedir="${build.dir}/classes"/>
     </target>
+
+    <target name="rmi-jar" depends="stubs">
+        <jar jarfile="${build.dir}/lib/${name}-rmi.raj">            
+            <fileset dir="${build.dir}/classes" includes="**/GenericServiceException.class"/>
+            <fileset dir="${build.dir}/classes" includes="**/GenericResultWaiter.class"/>
+            <fileset dir="${build.dir}/classes" includes="**/GenericRequester.class"/>
+            <fileset dir="${build.dir}/classes" includes="**/LocalDispatcher.class"/>
+            <fileset dir="${build.dir}/classes" includes="**/ModelService.class"/>
+            <fileset dir="${build.dir}/classes" includes="org/ofbiz/service/rmi/**"/>
+        </jar>
+    </target>
+
+    <target name="jar" depends="main-jar, rmi-jar"/>
 
     <!-- ================================================================== -->
     <!-- Build JavaDoc                                                      -->
