Cleaned up some missing ui labels; reordered appheader links in order manager to follow more of a quote to order to return flow, and to get Order Tasks (was Order List, confusing name) out of the way since many don't use it
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4925 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -12,6 +12,7 @@ help_also_interested_in=You might also be interested in :
 # ${totalQuantity} count of items
 cart.add_category_defaults=Added ${totalQuantity} items to the cart.
 cart.addToCart.noProductInfoPassed=No product information passed, not adding anything to cart.
+cart.addToCart.productConfigurationIsNotValid=Configuration Is Not Valid
 cart.price_not_positive_number=Price must be a positive number
 cart.quantity_not_positive_number=Quantity must be a positive number
 cart.order_not_specified_to_add_from=No order specified to add from
@@ -115,8 +116,8 @@ OrderDesiredDeliveryDate=Desired Delivery Date
 OrderDestination=Destination
 OrderEntryDate=Entry Date
 OrderFinalizeOrder=Finalize Order
-OrderFindOrder=Find Order(s)
-OrderFindReturn=Find return(s)
+OrderFindOrder=Find Orders
+OrderFindReturn=Find Returns
 OrderGiftMessage=Gift Message
 OrderGiftWrapAllItems=Gift Wrap All Items
 OrderGift=Gift?
@@ -171,6 +172,7 @@ OrderOrderQuotes=Quotes
 OrderOrderReturn=Return
 OrderOrderReturns=Returns
 OrderOrderShortcuts=Shortcuts
+OrderOrderTasks=Order Tasks
 OrderOrderTotal=Order Total
 OrderOrderType=Order Type
 OrderOriginFacility=Origin Facility
