Data for tax forms and COGS methods.  Entity for storing organization (party) accounting preferences (settings)
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4928 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -136,6 +136,7 @@ AccountingNoPaymentMethods=There are no payment methods on file.
 AccountingNoPaymentsfound=No Payments found
 AccountingOfflinePayment=Offline Payment
 AccountingOrders=Orders
+AccountingPartyMustBeInternalOrganization=Party must be an Internal Organization (set in PartyRole)
 AccountingPaymentDate=Payment Date
 AccountingPayment=Payment
 AccountingPaymentAlreadyReceived=Payment already received
