--- a/framework/shark/config/shark.properties
+++ b/framework/shark/config/shark.properties
@@ -15,17 +15,20 @@ EventAuditManagerClassName=org.ofbiz.shark.audit.EntityAuditMgr
 ParticipantMapPersistenceManagerClassName=org.ofbiz.shark.mapping.EntityParticipantMappingMgr
 ApplicationMapPersistenceManagerClassName=org.ofbiz.shark.mapping.EntityApplicationMappingMgr
 ScriptMapPersistenceManagerClassName=org.ofbiz.shark.mapping.EntityScriptMappingMgr
-UserGroupManagerClassName=org.ofbiz.shark.user.GenericUserGroupMgr
+UserGroupManagerClassName=org.ofbiz.shark.user.PartyUserGroupMgr
 AuthenticationManagerClassName=org.ofbiz.shark.auth.OfbizAuthenticationMgr
 TransactionManagerClassName=org.ofbiz.shark.transaction.JtaSharkTransactionFactory
 UserTransactionManagerClassName=org.ofbiz.shark.transaction.JtaUserTransactionFactory
-LoggingManagerClassName=org.ofbiz.shark.logging.DebugLoggingManager
+#LoggingManagerClassName=org.ofbiz.shark.logging.DebugLoggingManager
 
 #------------------------- Shark defaults -------------------------
 SecurityManagerClassName=org.enhydra.shark.security.StandardSecurityManager
 ScriptingManagerClassName=org.enhydra.shark.scripting.StandardScriptingManager
 LimitAgentManagerClassName=org.enhydra.shark.limitagent.TimerLimitAgentManager
 ToolAgentFactoryClassName=org.enhydra.shark.toolagent.ToolAgentFactoryImpl
+SecurityManagerClassName=org.enhydra.shark.security.StandardSecurityManager
+ScriptingManagerClassName=org.enhydra.shark.scripting.StandardScriptingManager
+LoggingManagerClassName=org.enhydra.shark.logging.StandardLoggingManager
 
 # Kernel configuration - OFBiz threaded kernel
 ToolAgentManagerClassName=org.enhydra.shark.ThreadedToolAgentManager
@@ -56,6 +59,10 @@ ToolAgent.JavaClassToolAgent=org.enhydra.shark.toolagent.JavaClassToolAgent
 ToolAgent.JavaScriptToolAgent=org.enhydra.shark.toolagent.JavaScriptToolAgent
 ToolAgent.BshToolAgent=org.enhydra.shark.toolagent.BshToolAgent
 ToolAgent.RuntimeApplicationToolAgent=org.enhydra.shark.toolagent.RuntimeApplicationToolAgent
-#ToolAgent.SOAPToolAgent=org.enhydra.shark.toolagent.SOAPToolAgent
-
+ToolAgent.MailToolAgent=org.enhydra.shark.toolagent.MailToolAgent
+ToolAgent.SOAPToolAgent=org.enhydra.shark.toolagent.SOAPToolAgent
 DefaultToolAgent=org.enhydra.shark.toolagent.DefaultToolAgent
+
+# Settings
+Deadlines.pollingTime=300000
+Limits.pollingTime=60000
