Added patch from Si Chen to implement convertUom service; plus small cleanups; OFBAC-7
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4951 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -343,3 +343,4 @@ PartyPartyID=Party ID
 PartyContactMechID=Contact Mechanism ID
 PartyContactPurpose=Contact Purpose
 
+NoUomConversionFound=UOM Conversion Relationship Not Found
