Added a missing label used in the WorkEffort webapp
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4967 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/workeffort/config/WorkEffortUiLabels.properties
+++ b/applications/workeffort/config/WorkEffortUiLabels.properties
@@ -101,6 +101,7 @@ WorkEffortNewNote=New Note
 WorkEffortNewPhase=New Phase
 WorkEffortNewProject=New Project
 WorkEffortNewRequest=New Request
+WorkEffortNewRequestItem=New Request Item
 WorkEffortNewRequirement=New Requirement
 WorkEffortNewTask=New Task
 WorkEffortNextDay=Next Day
