A bunch of cleanups, and a few conversions to screen widget; also changed some messages as mentioned in Jira OFBIZ-227
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4968 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -111,7 +111,7 @@ AccountingLookupInvoices=Lookup Invoices
 AccountingLookupPayment=Lookup Payment
 AccountingMainMenu=Main
 AccountingMainPage=Accounting Manager Main Page
-AccountingMainPageNote=NOTE: This application is currently in development. This page will change.
+AccountingMainPageNote=Welcome to the Accounting Manager!
 AccountingManagerApplication=Accounting Manager Application
 AccountingManualTxMenu=Manual Tx
 AccountingMethod=Method
