Added patch from Joe Eckard to dramatically improve the code that determines if an address is a USPS only address, ie a po box or rural route, etc; Jira #OFBIZ-218
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4976 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/general.properties
+++ b/framework/common/config/general.properties
@@ -19,7 +19,7 @@ country.geo.id.default=USA
 partner.trackingCodeId.default=
 
 # -- USPS address matching string - should be all lower case, no spaces, pipe delimited
-usps.address.match=pobox|postofficebox|rr|ruralroute
+usps.address.match=(^.*?p[\\. ]*o[\\. ]*box.*$)|(^.*?post.*?office.*?box.*$)|((^|(^.*? ))r[\\. ]*r[\\. ]*(( +)|([0-9#]+)).*$)|(^.*?rural.*?route.*$)
 
 # -- mail notifications enabled (Y|N)
 mail.notifications.enabled=N
