Improvements to the quote stuff (plus misc fixes):
- added new entity and services to manage coefficients for a quote: the coefficients are used to quickly calculate default prices for quote items based on product's averageCost
- added new screen to manage quote prices
- added some missing uilabels


git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4991 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -168,7 +168,17 @@ OrderOrderNeedingAttention=Orders Needing Attention
 OrderOrderNumber=Order Number
 OrderOrderOptionSettings=Order Option Settings
 OrderOrderPurchaseToBeScheduled=Order Purchase To Be Scheluded
+OrderOrderQuote=Quote
 OrderOrderQuotes=Quotes
+OrderOrderQuoteItem=Quote Item
+OrderOrderQuoteItems=Quote Items
+OrderOrderQuotePrices=Quote Prices
+OrderOrderQuoteAttributes=Quote Attributes
+OrderOrderQuoteCoefficients=Quote Coefficients
+OrderCreateOrderQuote=Create New Quote
+OrderCreateOrderQuoteItem=Create New Quote Item
+OrderCreateOrderQuoteAttribute=Create New Quote Attribute
+OrderCreateOrderQuoteCoefficient=Create New Quote Coefficient
 OrderOrderReturn=Return
 OrderOrderReturns=Returns
 OrderOrderShortcuts=Shortcuts
@@ -185,8 +195,6 @@ OrderPurchaseOrder=Purchase Order
 OrderQuantity=Quantity
 OrderQuickRefundEntireOrder=Quick Refund Entire Order
 OrderQuickShipEntireOrder=Quick Ship Entire Order
-OrderQuote=Order Quote
-OrderQuotes=Order Quote
 OrderRecalculateOrder=Recalculate Order
 OrderReceiveReturn=Receive Return
 OrderRemaining=Remaining
