New error message when GL debit/credit totals don't equal
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5003 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -65,6 +65,7 @@ AccountingCreditCard=Credit Card
 AccountingCurrency=Currency
 AccountingDate=Date
 AccountingDateFilter=Date Filter
+AccountingDebitCreditMustEqual=Debit and Credit Totals must be equal to post to GL.
 AccountingDeleteBillingAccountTermPermissionError=Security Error: to run removeBillingAccountTerm you must have the ACCOUNTING_DELETE or ACCOUNTING_ADMIN permission
 AccountingDescription=Description
 AccountingDueDate=Due Date
