Added missing page title ui label
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5004 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -95,6 +95,7 @@ PageTitleEditProductStoreWebSites=Edit Product Store Web Sites
 PageTitleEditShipmentItems=Edit Shipment Items
 PageTitleEditShipmentPackages=Edit Shipment Packages
 PageTitleEditShipmentRouteSegments=Edit Shipment Route Segments
+PageTitleEditSupplierProduct=Edit Supplier Product
 PageTitleFindFacility=Find Facility
 PageTitleFindFacilityGroup=Find Facility Group
 PageTitleFindFacilityLocation=Find Facility Location
