Removed the standard "requirement" management ui from the Manufacturing component; I'm going to move them to the Order component. In the Manufacturing component, the only screen that deals with requirements is now the "Approve Requirements" screen.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5014 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/manufacturing/config/ManufacturingUiLabels.properties
+++ b/applications/manufacturing/config/ManufacturingUiLabels.properties
@@ -89,7 +89,6 @@ ManufacturingMrpInitialisation=IEP init.
 ManufacturingNewCalendar=New calendar
 ManufacturingNewCalendarWeek=New Week
 ManufacturingNewMachineGroup=New Fixed Asset group
-ManufacturingNewRequirement=New Requirement
 ManufacturingNewRouting=New Routing
 ManufacturingNewRoutingTask=New Routing Task
 ManufacturingNoCalendarFound=No calendar found
@@ -119,10 +118,7 @@ ManufacturingProposedOrder=Proposed Order
 ManufacturingQuantity=Quantity
 ManufacturingQuantityMinimum=Quantity Minimum
 ManufacturingReason=Reason
-ManufacturingRequirements=Requirements
-ManufacturingRequirementByDate=Manufacturing Requirement By Date
-ManufacturingRequirementId=RequirementId
-ManufacturingRequirementStartDate=Manufacturing Requirement Start Date
+ManufacturingApproveRequirements=Approve Requirements
 ManufacturingRouting=Routing
 ManufacturingRoutings=Routings
 ManufacturingRoutingHasNoRoutingTask=Routing has no Routing Task
