Added "requirement" management ui to the Order component: now it's possible to find, create, update and delete requirements. Most of this stuff has been moved from the Manufacturing component.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5015 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -134,6 +134,7 @@ OrderImage=Image
 OrderViewImage=View Image
 OrderLookupOrder=Lookup Order(s)
 OrderLookupReturn=Lookup Return(s)
+OrderNewRequirement=New Requirement
 OrderNewShipmentForShipGroup=New Shipment For Ship Group
 OrderNoChannel=No Channel
 OrderNoGiftWrap=No Gift Wrap
@@ -200,6 +201,11 @@ OrderReceiveReturn=Receive Return
 OrderRemaining=Remaining
 OrderRemainingSubTotal=Remaining SubTotal
 OrderRequiredForSO=Required for SO
+OrderRequirement=Requirement
+OrderRequirements=Requirements
+OrderRequirementByDate=Manufacturing Requirement By Date
+OrderRequirementId=RequirementId
+OrderRequirementStartDate=Manufacturing Requirement Start Date
 OrderReturned=Returned
 OrderReturnId=Return ID
 OrderReturnFound=Return(s) Found
