Now the CustRequest management ui is in the Order component; a lot of this stuff was already present in the WorkEffort component.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5016 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -134,6 +134,24 @@ OrderImage=Image
 OrderViewImage=View Image
 OrderLookupOrder=Lookup Order(s)
 OrderLookupReturn=Lookup Return(s)
+OrderNewRequest=New Request
+OrderNewRequestItem=New Request Item
+OrderNoNotesForThisRequestItem=No Notes For This Request Item
+OrderNoRequestFound=No Request Found
+OrderNoRolesAssociatedRequest=No Roles Associated With This Customer Request
+OrderNotesForRequestItem=Notes For Request Item
+OrderRequest=Request
+OrderRequestingParty=Requesting Party
+OrderRequestItems=Request Items
+OrderRequestList=Request List
+OrderRequestManager=Request Manager
+OrderRequestName=Request Name
+OrderRequestRoles=Request Roles
+OrderRequestTaker=Request Taker
+OrderRequests=Requests
+OrderRequirementsForRequestItem=Requirements For Request Item
+OrderShowAllNotes=Show All Notes
+OrderShowThisItemsNotes=Show This Item's Notes
 OrderNewRequirement=New Requirement
 OrderNewShipmentForShipGroup=New Shipment For Ship Group
 OrderNoChannel=No Channel
