Applied patch from Jacopo for the clean-data ant target, now deletes the whole data directory instead of all of the files recursively in it; Jira #OFBIZ-233
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5021 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/build.xml
+++ b/build.xml
@@ -92,9 +92,7 @@
     </target>
 
     <target name="clean-data">
-        <delete verbose="on">
-            <fileset dir="data" includes="**/*"/>
-        </delete>
+        <delete verbose="on" dir="data"/>
     </target>
 
     <target name="clean-logs">
