Changed the Canadian provinces to provinces instead of states, changed the get states worker method to use both STATE and PROVINCE; added a few UI labels for different types of geo boundaries
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5049 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -108,6 +108,8 @@ CommonContinue=Continue
 CommonCopy=Copy 
 CommonCouldBeUsedAs=Could be Used as
 CommonCountry=Country
+CommonCounty=County
+CommonCountyCity=County-City
 CommonCreate=Create
 CommonCreateNew=Create New
 CommonCreated=Created
@@ -239,6 +241,7 @@ CommonPerson=Person
 CommonPrevious=Previous
 CommonPriority=Priority
 CommonProfile=Profile
+CommonProvince=Province
 CommonQualifier=Qualifier
 CommonQuantity=EventQuantity
 CommonQuantity=Quantity
@@ -289,6 +292,7 @@ CommonSmall=Small
 CommonSpecified=Specified
 CommonStartDate=Start Date
 CommonStartDateTime=Start Date/Time
+CommonState=State
 CommonStateProvince=State/Province
 CommonStats=Stats
 CommonStatus=Status
