Added PartyTaxInfo entity and a UI in the profile area of the party manager to administer the info; next step is to support the isExcempt flag on the new entity when doing tax calculations, perhaps leaving the tax adjustment in, but setting the total to 0, or even creating a reversal adjustment so that it is all more visible... don't know yet
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5051 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -56,6 +56,7 @@ PageTitleShoppingList=Shopping List
 PageTitleViewPartyProfile=View Party Profile
 PageTitleViewPartyRole=View Party Roles
 PageTitleViewVendorParty=View Vendor Party Info
+PageTitleEditPartyTaxInfos=Edit Party Tax Info
 PageTitleVisitDetail=Visit Detail
 PageTitleVisitList=Visit List
 
@@ -177,7 +178,7 @@ PartyMaritalStatus=Marital Status
 PartyMechPurposeTypeNotFound=Purpose Type not found with ID
 PartyMemberRoles=Member Roles
 PartyMiddleInitial=Middle Initial
-PartyMgrViewPermissionError=PartyMgrViewPermissionError You do not have permission to view this page. ("PARTYMGR_VIEW" or "PARTYMGR_ADMIN" needed)
+PartyMgrViewPermissionError=You do not have permission to view this page. ("PARTYMGR_VIEW" or "PARTYMGR_ADMIN" needed)
 PartyMothersMaidenName=Mothers Maiden Name
 PartyMsgContactHavePurpose=Note: this new contact information will have the purpose
 PartyMsgContactNotBelongToYou=The contact information specified does not belong to you, you may not view or edit it.
@@ -285,6 +286,7 @@ PartyStillActive=Still Active
 PartySubject=Subject
 PartySuffix=Suffix
 PartySupplier=Supplier
+PartyTaxInfos=Tax Infos
 PartyTerm=Term
 PartyTermTyp=Term Type
 PartyTermValue=Term Value
