Various changes: formatting and HTML cleanups; removed some remaining JPublish artifacts from order manager; fixed issue with wrong party used for finding the available billing accounts in the order manager order entry (based on patch from Chris Howe); fixed issue in checkout process with wrong party showing in header, caused by use of conflicting names for partyId, party, person
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5055 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -119,7 +119,7 @@ OrderFinalizeOrder=Finalize Order
 OrderFindOrder=Find Orders
 OrderFindReturn=Find Returns
 OrderGiftMessage=Gift Message
-OrderGiftWrapAllItems=Gift Wrap All Items
+OrderGiftWrapAllItems=Gift Wrap All Items?
 OrderGift=Gift?
 OrderGrandTotal=Grand Total
 OrderInProgress=In Progress
