Applied patch to internationalize the quote stuff; many thanks to Jean-Luc Malet for all of this (OFBIZ-260).
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5061 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -107,7 +107,10 @@ OrderContactInformation=Contact Information
 OrderCreatedBy=Created by
 OrderCreateNewReturn=Create new return
 OrderCreateOrder=Create Order
-OrderCreateReturn=Create return
+OrderCreateOrderQuote=Create New Quote
+OrderCreateOrderQuoteItem=Create New Quote Item
+OrderCreateOrderQuoteAttribute=Create New Quote Attribute
+OrderCreateOrderQuoteCoefficient=Create New Quote CoefficientOrderCreateReturn=Create return
 OrderCurrentStatus=Current Status
 OrderCustomerPo=Custumer PO#
 OrderDate=Order Date
@@ -183,21 +186,38 @@ OrderOrderHeaderInfo=Order Header Info
 OrderOrderId=Order Id
 OrderOrderItems=Order Items
 OrderOrderList=Order List
+OrderOrderManagerApplication=Order Manager Application
 OrderOrderNeedingAttention=Orders Needing Attention
 OrderOrderNumber=Order Number
 OrderOrderOptionSettings=Order Option Settings
 OrderOrderPurchaseToBeScheduled=Order Purchase To Be Scheluded
 OrderOrderQuote=Quote
-OrderOrderQuotes=Quotes
+OrderOrderQuoteAttributeName=Attribute Name
+OrderOrderQuoteAttributeValue=Attribute Value
+OrderOrderQuoteAttributes=Quote Attributes
+OrderOrderQuoteAverageCost=Average Cost
+OrderOrderQuoteCoeffName=Coeff. Name
+OrderOrderQuoteCoefficients=Quote Coefficients
+OrderOrderQuoteCoeffValue=Coeff. Value
+OrderOrderQuoteCostToPrice=Cost to Price
+OrderOrderQuoteDefaultUnitPrice=Default Unit Price
+OrderOrderQuoteDeliverableTypeId=Deliverable Type Id
+OrderOrderQuoteEstimatedDeliveryDate=Estimated Delivery Date
+OrderOrderQuoteId=Quote Id
+OrderOrderQuoteIssueDate=Quote Issue Date
 OrderOrderQuoteItem=Quote Item
 OrderOrderQuoteItems=Quote Items
+OrderOrderQuoteItemSeqId=Quote Item Seq Id
+OrderOrderQuoteManualUnitPrice=Manual Unit Price
+OrderOrderQuotePercent=Quote Percent
 OrderOrderQuotePrices=Quote Prices
-OrderOrderQuoteAttributes=Quote Attributes
-OrderOrderQuoteCoefficients=Quote Coefficients
-OrderCreateOrderQuote=Create New Quote
-OrderCreateOrderQuoteItem=Create New Quote Item
-OrderCreateOrderQuoteAttribute=Create New Quote Attribute
-OrderCreateOrderQuoteCoefficient=Create New Quote Coefficient
+OrderOrderQuotes=Quotes
+OrderOrderQuoteSkillTypeId=Quote Skill Type Id
+OrderOrderQuoteTypeId=Quote Type Id	
+OrderOrderQuoteUnitPrice=Quote Unit Price
+OrderOrderQuoteuomId=Quote Uom Id
+OrderOrderQuoteViewRequest=View Request
+OrderOrderQuoteWorkEffortId=QuoteWorkEffortId
 OrderOrderReturn=Return
 OrderOrderReturns=Returns
 OrderOrderShortcuts=Shortcuts
